flex/04-flex-information/style.css
body {
  font-family: 'Courier New', Courier, monospace;
  text-align: center;
}

.planter {
  display: flex;
  justify-content: center;
  gap: 52px;
}

.plant{
  max-width: 200px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

img {
  width: 100px;
  height: 100px;
}

.title {
  font-size: 36px;
  font-weight: 900;
}

/* do not edit this footer */
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #eee;
}

